2007-08-22  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_select_after_realize): if no background
	image set, select "no wallpaper"

2007-08-14  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init):
	* data/appearance.glade: correct the item width and enable line
	wrapping for long theme names (bug #466405)

2007-08-11  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (conv_from_widget_cb): make sure we have a
	selection before trying to get the data (bug #465431)

2007-08-11  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_from_uri): fix leak

2007-08-09  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_drag_data_received_cb),
	(themes_init): restrict drag'n'drop installation to the theme tab
	instead of the entire window so lockdown works properly

	* theme-installer.c: (gnome_theme_install_from_uri),
	(gnome_theme_installer_run):
	* theme-installer.h: fix double-free and use-after-free

2007-08-09  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): reenable theme lockdown

2007-08-09  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-xml.c: (gnome_wp_xml_load_list),
	(gnome_wp_xml_save_list):
	* theme-installer.c: (gnome_theme_install_from_uri): tiny optimization

2007-08-08  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (gtk_theme_changed): revert r7973 because it
	broke color scheme notifications, and add a comment
	* appearance-themes.c: (theme_setting_changed_cb), (themes_init):
	connect to some signals from GtkSettings instead of GConf

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_add_images), (wp_dragged_image),
	(desktop_init):
	* appearance-main.c: (main):
	* appearance-style.c: (update_color_buttons_from_settings),
	(check_color_schemes_enabled), (update_cursor_size_scale),
	(prepare_list), (style_init):
	* appearance-ui.c: (ui_init): shave off a number of unnecessary casts
